# customchat

./: .env  .gitignore  README.md  app.py  prompt.txt  pyproject.toml
data/: .gitignore
src/customchat/: chat.py  prompt.py  rag.py
