[project]
name = "customchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Molitor", email = "molitdj97@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "chatlas>=0.15.0",
    "openai>=2.14.0",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
    "shiny>=1.5.1",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
